--- a/index.html
+++ b/index.html
@@ -738,7 +738,7 @@
             <div class="setting-item">
                 <div>
                     <div class="setting-label">連接狀態</div>
-                    <div class="setting-desc">eye-exam-data.firebaseapp.com</div>
+                    <div class="setting-desc">eye-exam-data-5c914.firebaseapp.com</div>
                 </div>
                 <span class="setting-value" id="firebaseStatus" style="color: var(--success);">已連接 ✓</span>
             </div>
@@ -916,12 +916,12 @@ service firebase.storage {
 
             try {
                 const firebaseConfig = {
-                    apiKey: "AIzaSyCMW7BI7C5oXn_jRjMq0hpeVls04ueLYkc",
-                    authDomain: "eye-exam-data.firebaseapp.com",
-                    projectId: "eye-exam-data",
-                    storageBucket: "eye-exam-data.firebasestorage.app",
-                    messagingSenderId: "85380587070",
-                    appId: "1:85380587070:web:ef813003f6a755f98bbb6f"
+                    apiKey: "AIzaSyC3yU01v_fOhBiwXuQPzQtlQdGaHHnGTVw",
+                    authDomain: "eye-exam-data-5c914.firebaseapp.com",
+                    projectId: "eye-exam-data-5c914",
+                    storageBucket: "eye-exam-data-5c914.firebasestorage.app",
+                    messagingSenderId: "716742721009",
+                    appId: "1:716742721009:web:ba7388feed77700a2d5850"
                 };
 
                 if (!firebase.apps.length) {
