--- a/index.html
+++ b/index.html
@@ -1,24 +1,31 @@
-function initFirebase() {
+<script type="module">
+  // 初始化 Firebase 的函數
+  function initFirebase() {
     try {
-        const firebaseConfig = {
-            apiKey: import.meta.env.VITE_FIREBASE_API_KEY,
-            authDomain: import.meta.env.VITE_FIREBASE_AUTH_DOMAIN,
-            projectId: import.meta.env.VITE_FIREBASE_PROJECT_ID,
-            storageBucket: import.meta.env.VITE_FIREBASE_STORAGE_BUCKET,
-            messagingSenderId: import.meta.env.VITE_FIREBASE_MESSAGING_SENDER_ID,
-            appId: import.meta.env.VITE_FIREBASE_APP_ID
-        };
+      const firebaseConfig = {
+        apiKey: import.meta.env.VITE_FIREBASE_API_KEY,
+        authDomain: import.meta.env.VITE_FIREBASE_AUTH_DOMAIN,
+        projectId: import.meta.env.VITE_FIREBASE_PROJECT_ID,
+        storageBucket: import.meta.env.VITE_FIREBASE_STORAGE_BUCKET,
+        messagingSenderId: import.meta.env.VITE_FIREBASE_MESSAGING_SENDER_ID,
+        appId: import.meta.env.VITE_FIREBASE_APP_ID
+      };
 
-        if (!firebase.apps.length) {
-            firebase.initializeApp(firebaseConfig);
-        }
-
-        db = firebase.firestore();
-        storage = firebase.storage();
-        firebaseInitialized = true;
-        return true;
+      if (!firebase.apps.length) {
+        firebase.initializeApp(firebaseConfig);
+      }
+      
+      db = firebase.firestore();
+      storage = firebase.storage();
+      firebaseInitialized = true;
+      console.log("Firebase 連結成功！");
+      return true;
     } catch (error) {
-        console.error('Firebase init error:', error);
-        return false;
+      console.error('Firebase init error:', error);
+      return false;
     }
-}
+  }
+
+  // 執行初始化
+  initFirebase();
+</script>
