After edit save, return to same record detail page instead of home

--- a/index.html
+++ b/index.html
@@ -2505,10 +2505,11 @@ service firebase.storage {
                 showToast(isEditing ? '✓ 資料已更新' : '✓ 資料已儲存', 'success');
                 
                 if (isEditing) {
-                    // Exit edit mode after update
+                    // Stay on the same record page, but exit edit mode
+                    const editedId = window.editingCustomerId;
                     window.editingCustomerId = null;
                     resetUploadForm();
-                    showPage('home');
+                    await showCustomerDetail(editedId);
                     return;
                 }
                 
