--- a/index.html
+++ b/index.html
@@ -465,15 +465,25 @@
         .btn-primary {
             background: linear-gradient(135deg, var(--primary) 0%, var(--primary-light) 100%);
             color: white;
+            box-shadow: 0 6px 16px rgba(26, 95, 122, 0.28);
+            transition: transform 0.12s ease, box-shadow 0.12s ease, filter 0.12s ease;
         }
 
         .btn-primary:active {
-            transform: scale(0.98);
+            transform: scale(0.97);
+            filter: brightness(0.8);
+            box-shadow: 0 2px 6px rgba(13, 61, 77, 0.45);
+        }
+
+        .btn-primary:focus-visible {
+            outline: 3px solid rgba(87, 197, 182, 0.75);
+            outline-offset: 2px;
         }
 
         .btn-primary:disabled {
             opacity: 0.6;
             cursor: not-allowed;
+            box-shadow: none;
         }
 
         .btn-danger {
